<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UI3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pm2_5">PM2.5:</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="nei">内循环</string>
    <string name="wai">外循环</string>
    <string name="fengshan">风  机</string>
    <string name="deng">紫光灯</string>
    <string name="jingdian">静电箱</string>
    <string name="shouming">器件寿命</string>
    <string name="kaiguan">总开关</string>
    <string name="co2">CO₂:</string>
    <string name="moshi">模式</string>
    <string name="buff">器件状态</string>
    <string name="biao">图表</string>
    <string name="MoshiBuff">模式： </string>

</resources>
